[add] styles search product map

--- a/components/Footer/footer.module.css
+++ b/components/Footer/footer.module.css
@@ -1,14 +1,28 @@
 .footer {
-    background: linear-gradient(to bottom, #F7F0EF  10%,  #B55BB8 90%);
-    display: grid;
-    justify-content: center;
-    align-items: center;
+    background: linear-gradient(to bottom, #F7F0EF  1%,  #B55BB8 9%);
+    padding: 4em 0em;
+    margin-top: 3em;
+    border-top: 1px solid #f2f2f2;
 }
+
+.footer_container {
+    display: grid;
+    grid-template-rows: 1fr 1fr;
+    justify-content: center;
+}
+
+
+.footer_container_column {
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    align-items: center;
+    justify-items: center;
+}
+
 
 .footer_copyright {
     color: #F7F0EF;
-    font-size: 1.4rem;
-    font-weight: 400;
-    line-height: 1.5rem;
-    padding: 10px;
+    text-align: center;
+    margin-top: 3.2rem;
+    font-size: 0.8rem;
 }
