--- a/public/style.css
+++ b/public/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap");
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
 
 * {
   margin: 0;
@@ -8,7 +8,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: "Open Sans", sans-serif;
+  font-family: 'Open Sans', sans-serif;
 }
 
 h1 {
