--- a/public/style.css
+++ b/public/style.css
@@ -1,5 +1,15 @@
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:300,400&display=swap');
 
+:root {
+  /* Colores */
+  --background-header: linear-gradient(to bottom, #b55bb8 10%, #f7f0ef 90%);
+  --color-icon: linear-gradient(to bottom, #b55bb8 10%, #f7f0ef 90%);
+  --color-valery: #b55bb8;
+  --background-footer: linear-gradient(to bottom, #f7f0ef 1%, #b55bb8 9%);
+  --color-white:#f2f2f2;
+  --background: #b55bb8;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -12,8 +22,8 @@ html {
 }
 
 h1 {
-  font-size: 3rem;
-  color: #b55bb8;
+  font-size: 2rem;
+  color: var(--color-valery);
 }
 
 h2,
@@ -25,8 +35,4 @@ p,
 span {
   font-size: 1.5rem;
   font-weight: 300;
-}
-
-.main {
-  margin: 0 10rem;
 }
