--- a/public/style.css
+++ b/public/style.css
@@ -28,11 +28,13 @@ h1 {
 
 h2,
 h3 {
-  font-size: 1.7rem;
+  font-size: 1.6rem;
+  font-weight: bold;
+  text-align: center;
 }
 
 p,
 span {
-  font-size: 1.5rem;
+  font-size: 1.4rem;
   font-weight: 300;
 }
