--- a/public/style.css
+++ b/public/style.css
@@ -2,13 +2,13 @@
 
 :root {
   /* Colores */
-  --background-header: linear-gradient(to bottom, #b55bb8 10%, #f7f0ef 90%);
-  --color-icon: linear-gradient(to bottom, #b55bb8 10%, #f7f0ef 90%);
-  --color-valery: #b55bb8;
-  --background-footer: linear-gradient(to bottom, #f7f0ef 1%, #b55bb8 9%);
+  --color-primary: #d86aff;
+  --color-secundary: #ab3ed8;
+  --color-terciario:  #7f00b2;
+  --color-four: #650099;
+  --color-five: #4b0081;
   --color-white:#f2f2f2;
-  --background: #b55bb8;
-  --color-secundary: #B156C4;
+  
 }
 
 * {
